@@ -159,6 +159,7 @@ Thank you to all who provided feedback, participants to our usability testing se
  * Add deprecation warnings for `wagtail.core` and other imports deprecated in Wagtail 3.0 (Matt Westcott)
  * Migrate admin upgrade notification message implementation to a Stimulus controller (Loveth Omokaro)
  * Migrate workflow and workflow tasks enable action to a Stimulus controller (Loveth Omokaro)
+ * Pull out icon sprite setup function from inline script to its own TypeScript file & add unit tests (Loveth Omokaro)
 
 ## Upgrade considerations
 
