@@ -17,54 +17,8 @@
     {% sidebar_collapsed as sidebar_collapsed %}
     <body id="wagtail" class="{% block bodyclass %}{% endblock %} {% if sidebar_collapsed %}sidebar-collapsed{% endif %} {% if messages %}has-messages{% endif %}">
         <div data-sprite></div>
-        <script>
-            function loadIconSprite() {
-                var spriteURL = '{% url "wagtailadmin_sprite" %}';
-                var revisionKey = 'wagtail:spriteRevision';
-                var dataKey = 'wagtail:spriteData';
-                var isLocalStorage = 'localStorage' in window && typeof window.localStorage !== 'undefined';
 
-                var insertIt = function (data) {
-                    var spriteContainer = document.body.querySelector('[data-sprite]');
-                    spriteContainer.innerHTML = data;
-                }
-
-                var insert = function (data) {
-                    if (document.body) {
-                        insertIt(data)
-                    } else {
-                        document.addEventListener('DOMContentLoaded', insertIt.bind(null, data));
-                    }
-                }
-
-                if (isLocalStorage && localStorage.getItem(revisionKey) === spriteURL) {
-                    var data = localStorage.getItem(dataKey);
-                    if (data) {
-                        insert(data);
-                        return true;
-                    }
-                }
-
-                try {
-                    var request = new XMLHttpRequest();
-                    request.open('GET', spriteURL, true);
-                    request.onload = function () {
-                        if (request.status >= 200 && request.status < 400) {
-                            data = request.responseText;
-                            insert(data);
-                            if (isLocalStorage) {
-                                localStorage.setItem(dataKey, data);
-                                localStorage.setItem(revisionKey, spriteURL);
-                            }
-                        }
-                    }
-                    request.send();
-                } catch (e) {
-                    console.error(e);
-                }
-            }
-            loadIconSprite();
-        </script>
+        <script src="{% versioned_static 'wagtailadmin/js/icons.js' %}" data-icon-url="{% url 'wagtailadmin_sprite' %}"></script>
 
         <noscript class="capabilitymessage">
             {% blocktrans trimmed %}
